--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nameHeader {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 1px 2px 9px black;
+  box-shadow: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 3%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-radius: 25px;
+  font-family: "Garamond"
+}
