--- a/src/Internship.css
+++ b/src/Internship.css
@@ -15,6 +15,9 @@
   border:solid 1px black;
   border-radius: 10px;
 }
+.singleInternship:hover {
+  background-color:lightgrey;
+}
 
 .internship {
     position:relative;
